; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/butterstick/extr_sten.c_restoreState.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/butterstick/extr_sten.c_restoreState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pChord = common dso_local global i32 0, align 4
@cChord = common dso_local global i32 0, align 4
@pChordIndex = common dso_local global i32 0, align 4
@chordIndex = common dso_local global i32 0, align 4
@pChordState = common dso_local global i32* null, align 8
@chordState = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @restoreState() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @pChord, align 4
  store i32 %2, i32* @cChord, align 4
  %3 = load i32, i32* @pChordIndex, align 4
  store i32 %3, i32* @chordIndex, align 4
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %17, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 32
  br i1 %6, label %7, label %20

7:                                                ; preds = %4
  %8 = load i32*, i32** @pChordState, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** @chordState, align 8
  %14 = load i32, i32* %1, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  store i32 %12, i32* %16, align 4
  br label %17

17:                                               ; preds = %7
  %18 = load i32, i32* %1, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %1, align 4
  br label %4

20:                                               ; preds = %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
